# mc

./: .clang-format  .cvsignore  .gitattributes  .gitignore  .travis.yml  ABOUT-NLS  AUTHORS  BUGS  COPYING  ChangeLog  FAQ  HACKING  INSTALL  INSTALL.FAST  MAINTAINERS  Make.common.in  Makefile.am  Makefile.in  NEWS  README  README.CVS  README.OS2  README.PC  README.QNX  README.md  README.smbfs  TODO  VERSION  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  build-glib1.sh  build-glib2.sh  config.h.in  configure  configure.ac  configure.in  erb.syntax  extraconf.h  (+9 more)
contrib/: .gitignore  Makefile.am  README.xterm  mc-wrapper.csh.in  mc-wrapper.fish.in  mc-wrapper.sh.in  mc.charsets  mc.csh.in  mc.fish.in  mc.sh.in  mcserv.init  mcserv.pamd
doc/: .cvsignore  .gitignore  COPYING  DEVEL  FAQ  FILES  HACKING  INSTALL  INSTALL.FAST  LSM  MAINTAINERS  MIRRORS.txt  Makefile.am  Makefile.in  NEWS  NEWS.4.7  NEWS.OLD  PLUGINS  README  README.QNX  TODO  TREE-SITTER  doxygen-include.am  doxygen.cfg  filehighlight.txt  gnome.sgml  keybind-migration.txt  linuxdoc-sgml.diff  mc.1.in  mc.sgml  mcedit.1.in  mcserv.8.in  mcview.1.in  xnc.hlp
doc-gnome/C/: .cvsignore  Makefile.am  Makefile.in  gmc.sgml  mkhtml
doc/es/: .cvsignore  Makefile.am  mc.1.in  xnc.hlp
doc/hints/: Makefile.am  mc.hint  mc.hint.cs  mc.hint.es  mc.hint.hu  mc.hint.it  mc.hint.nl  mc.hint.pl  mc.hint.ru  mc.hint.sr  mc.hint.uk  mc.hint.zh
doc/hlp/: Makefile.am  hlp-lang-include.am  xnc.hlp
doc/hu/: .cvsignore  Makefile.am  mc.1.in  mc.hlp.hu  mc.hlp.hu.in  xnc.hlp
doc/it/: .cvsignore  Makefile.am  mc.1.in  xnc.hlp
doc/man/: Makefile.am  date-of-man-include.am  mc.1.in  mcdiff.1.in  mcedit.1.in  mcserv.8.in  mcview.1.in
doc/pl/: .cvsignore  Makefile.am  mc.1.in  xnc.hlp
doc/ru/: .cvsignore  CHARSET.workflow.txt  Makefile.am  mc.1.in  xnc.hlp
doc/sr/: .cvsignore  Makefile.am  mc.1.in  mcserv.8.in  xnc.hlp
edit/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  bookmark.c  choosesyntax.c  edit-impl.h  edit-widget.h  edit.c  edit.h  edit_key_translator.c  editcmd.c  editcmd_dialogs.c  editcmd_dialogs.h  editcmddef.h  editdraw.c  editkeys.c  editlock.c  editlock.h  editmenu.c  editoptions.c  editwidget.c  etags.c  etags.h  syntax.c  usermap.c  usermap.h  wordproc.c
gnome/mime-type/: .cvsignore  Makefile.am  edit-window.c  edit-window.h  mime-data.c  mime-data.h  mime-info.c  mime-info.h  mime-type-capplet.c  mime-type.desktop  new-mime-window.c  new-mime-window.h
lib/: .cvsignore  .gitignore  ChangeLog  Makefile.am  Makefile.in  README.desktop  README.xterm  ansi.ti  cedit.menu  charsets.c  charsets.h  edit.indent.rc  edit.spell.rc  event-types.h  event.h  file-entry.h  filehighlight.h  fileloc.h  fs.h  glibcompat.c  glibcompat.h  global.c  global.h  hook.c  hook.h  idx.h  intprops-internal.h  intprops.h  keybind.c  keybind.h  keymap.c  keymap.h  linux.ti  lock.c  lock.h  logging.c  logging.h  mc-gnome.ext.in  mc-wrapper.csh.in  mc-wrapper.sh.in  (+63 more)
lib/event/: Makefile.am  event-ru.txt  event.c  event.txt  internal.h  manage.c  raise.c
lib/filehighlight/: Makefile.am  common.c  fhl.h  get-color.c  ini-file-read.c  internal.h
lib/keybind/: TODO.txt  readme.txt
lib/mcconfig/: Makefile.am  common.c  get.c  history.c  paths.c  set.c
lib/search/: Makefile.am  glob.c  hex.c  internal.h  lib.c  normal.c  regex.c  search.c  search.h
lib/skin/: Makefile.am  colors-old.c  colors.c  common.c  hc-skins.c  ini-file.c  internal.h  lines.c  skin.h
misc/: .gitignore  Makefile.am  cedit.menu  edit.indent.rc  edit.spell.rc  filehighlight.ini  mc.charsets  mc.charsets.in  mc.default.keymap  mc.emacs.keymap  mc.ext  mc.ext.in  mc.ext.ini.in  mc.keydef  mc.keymap  mc.keymap.default  mc.keymap.emacs  mc.lib  mc.macros  mc.menu  mc.menu.in  mc.menu.sr  mc.menu.sr.in  mc.vim.keymap  mcedit.menu  mcedit.menu.in  panels.ftp.ini  panels.git.ini
new_icons/: Makefile.am  Makefile.in
pc/: BUGS  ChangeLog  Makefile  Makefile.BC2  Makefile.BC5  Makefile.EMX  Makefile.IBM  Makefile.MIN  Makefile.PC  Makefile.RSX  Makefile.VC4  Makefile.am  README  TODO  chmod.c  config.h  cons_nt.c  cons_os2.c  dirent.h  dirent_nt.c  dirent_os2.c  drive.c  key_nt.c  key_os2.c  mc.def  mc.rc  slint_pc.c  trace_nt.c  trace_nt.h  util_nt.c  util_os2.c  util_win32.c  util_win32.h  util_winnt.c
slang/: .cvsignore  .gitignore  ChangeLog  Makefile.am  Makefile.in  README  _slang.h  jdmacros.h  slang-mc.h  slang.h  slcommon.c  sldisply.c  slerr.c  slgetkey.c  sllower.c  slmemcpy.c  slmemset.c  slmisc.c  slos2tty.c  slsignal.c  slsmg.c  slstring.c  sltermin.c  sltoken.c  slupper.c  slutf8.c  slutty.c  slvideo.c  slw32tty.c  slwcwidth.c
src/: .cvsignore  .gitignore  ChangeLog  Makefile.am  Makefile.in  OChangeLog  TODO  achown.c  achown.h  args.c  args.h  background.c  background.h  boxes.c  boxes.h  charsets.c  charsets.h  chmod.c  chmod.h  chown.c  chown.h  clipboard.c  clipboard.h  cmd.c  cmd.h  cmddef.h  color.c  color.h  command.c  command.h  complete.c  complete.h  cons.handler.c  cons.saver.c  cons.saver.h  dialog-switch.c  dialog-switch.h  dialog.c  dialog.h  dir.c  (+158 more)
syntax/: ChangeLog  Makefile.am  Makefile.in  PKGBUILD.syntax  Syntax  ada95.syntax  assembler.syntax  awk.syntax  c.syntax  changelog.syntax  cs.syntax  css.syntax  cxx.syntax  debian-description.syntax  diff.syntax  diffc.syntax  dos.syntax  ebuild.syntax  eiffel.syntax  erlang.syntax  f90.syntax  fortran.syntax  html.syntax  j.syntax  java.syntax  js.syntax  latex.syntax  lisp.syntax  lsm.syntax  lua.syntax  m4.syntax  mail.syntax  makefile.syntax  ml.syntax  named.syntax  nemerle.syntax  nroff.syntax  octave.syntax  pascal.syntax  perl.syntax  (+20 more)
vfs/: .cvsignore  .gitignore  COPYING.LGPL  ChangeLog  HACKING  Make-alone.am  Make-mc.in  Makefile.am  Makefile.in  README  README.fish  callback.h  container.c  container.h  cpio.c  direntry.c  direntry.h  extfs.c  extfs.h  fish.c  fish.h  ftpfs.c  ftpfs.h  gc.c  gc.h  libvfs.c  local.c  local.h  mcfs.c  mcfs.h  mcfsutil.c  mcfsutil.h  mcserv.c  names.c  names.h  netutil.c  sfs.c  shared.c  shared_ftp_fish.c  shared_tar_ext.c  (+15 more)
(+2225 files in other folders)
